--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,11 @@
 [tool.poetry]
-name = "python-template"
+name = "pyproject-pre-commit"
 version = "0.0.1"
 description = ""
-authors = ["USER <EMAIL>"]
+authors = ["rcmdnk <rcmdnk@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.11"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "7.2.1"
-pytest-cov = "4.0.0"
-pytest-xdist = "3.1.0"
-pytest-benchmark = "4.0.0"
+python = ">=3.9,<3.12"
 pre-commit = "2.21.0"
 black = "22.12.0"
 blacken-docs = "1.13.0"
@@ -40,6 +34,12 @@ mdformat = "0.7.16"
 mdformat-gfm = "0.3.5"
 mdformat-frontmatter = "0.4.1"
 mdformat-footnote = "0.1.1"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "7.2.1"
+pytest-cov = "4.0.0"
+pytest-xdist = "3.1.0"
+pytest-benchmark = "4.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -86,3 +86,6 @@ strict = true
 warn_return_any = false
 ignore_missing_imports = true
 scripts_are_modules = true
+
+[tool.poetry.scripts]
+ppc = "pyproject_pre_commit:main"
