fix: secrets, separate workflows

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,13 +7,6 @@ on:
       - "coverage"
       - "renovate/**"
   pull_request:
-  workflow_dispatch:
-    inputs:
-      debug_enabled:
-        type: boolean
-        description: 'Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate)'
-        required: false
-        default: false
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -21,30 +14,25 @@ concurrency:
 
 jobs:
   test:
-    name: Test
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest]
-        python-version: ["3.11", "3.10", "3.9"]
+    runs-on: ubuntu-latest
     permissions:
-      contents: write
-    runs-on: ${{ matrix.os }}
+      actions: write
     steps:
-      - name: Check is main
-        id: is_main
-        run: |
-          if [ "${{ github.ref }}" = "refs/heads/main" ] && [ "${{ matrix.os }}" = "ubuntu-latest" ] && [ "${{ matrix.python-version }}" = "3.10" ];then
-            echo "flag=1" >> $GITHUB_OUTPUT
-          else
-            echo "flag=0" >> $GITHUB_OUTPUT
-          fi
-      - uses: rcmdnk/python-action@v1
+      - uses: convictional/trigger-workflow-and-wait@v1.6.5
+        continue-on-error: true
+        id: dispatch
         with:
-          pytest-cov-path: "src"
-          coverage-push: "${{ steps.is_main.outputs.flag }}"
-          pre-commit: "${{ steps.is_main.outputs.flag }}"
-      # Enable tmate debugging of manually-triggered workflows if the input option was provided
-      - name: Setup tmate session
-        if: ${{ steps.is_main.outputs.flag == '1' && github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
-        uses: mxschmitt/action-tmate@v3
+          owner: ${{ github.repository_owner }}
+          repo: ${{ github.event.repository.name }}
+          ref: ${{ github.ref }}
+          github_token: ${{ github.token }}
+          workflow_file_name: dispatch.yml
+          propagate_failure: true
+      - name: Write workflow url
+        run: |
+          echo Main job URL: ${{ steps.dispatch.outputs.workflow_url }} >> $GITHUB_STEP_SUMMARY
+      - name: Check status
+        run: |
+          if [ "${{ steps.dispatch.outcome }}" != "success" ];then
+            exit 1
+          fi
