--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -51,5 +51,5 @@ jobs:
       - name: Publish to PyPI
         run: |
           pip install poetry
-          poetry config pypi-token.pypi ${{ secrets.PYPY_TOKEN }}
+          poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
           poetry publish --build
