--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,22 @@
 [tool.poetry]
 name = "pyproject-pre-commit"
 version = "0.0.1"
-description = ""
+description = "pre-commit hooks for python projects using pyproject.toml."
 authors = ["rcmdnk <rcmdnk@gmail.com>"]
+repository = "https://github.com/rcmdnk/pyproject-pre-commit"
+homepage = "https://github.com/rcmdnk/pyproject-pre-commit"
+readme = "README.md"
+license = "Apache-2.0"
+keywords = ["pre-commit", "pyproject.toml", "poetry"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Environment :: Console",
+    "Intended Audience :: Developers",
+    "Operating System :: OS Independent",
+    "Topic :: Software Development",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Utilities",
+]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
