--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,39 +20,38 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
-pre-commit = "2.21.0"
-black = "22.12.0"
-blacken-docs = "1.13.0"
-flake8-pyproject = "1.2.2"
-flake8-annotations-complexity = "0.0.7"
-flake8-bugbear = "23.1.20"
-flake8-builtins = "2.1.0"
-flake8-comprehensions = "3.10.1"
-flake8-debugger = "4.1.2"
-flake8-docstrings = "1.7.0"
-flake8-executable = "2.1.3"
-flake8-pep3101 = "^2.0.0"
-flake8-print = "5.0.0"
-flake8-rst-docstrings = "0.3.0"
-flake8-string-format = "0.3.0"
-pep8-naming = "0.13.3"
-pycodestyle = "2.10.0"
-autoflake = "2.0.1"
-autopep8 = "2.0.1"
-isort = "5.12.0"
-mypy = "0.991"
-bandit = {extras = ["toml"], version = "1.7.4"}
-pre-commit-hooks = "4.4.0"
-shellcheck-py = "0.9.0.2"
-mdformat = "0.7.16"
-mdformat-gfm = "0.3.5"
-mdformat-frontmatter = "0.4.1"
-mdformat-footnote = "0.1.1"
+pre-commit = "^2.21.0"
+flake8-pyproject = "^1.2.2"
+
+# 0.17.0 depends on flake8 < 5, the current main branch depends on flake8 ^5.0
+# flake8 4.x depends on pycodestyle>=2.8.0,<2.9.0, pyflakes>=2.4.0,<2.5.0
+# flake8 5.x depends on pycodestyle>=2.9.0,<2.10.0, pyflakes>=2.5.0,<2.6.0
+# flake8 6.x depends on pycodestyle>=2.10.0,<2.11.0, pyflakes>=3.0.0,<3.1.0
+wemake-python-styleguide = {git = "https://github.com/wemake-services/wemake-python-styleguide"}
+
+# [Auto-formatters — wemake-python-styleguide 0.17.0 documentation](https://wemake-python-styleguide.readthedocs.io/en/latest/pages/usage/integrations/auto-formatters.html?highlight=flake8-print)
+autoflake = "^1.7.8" # >= 2.0.0 depends on pyflakes >= 3.0.0
+autopep8 = "2.0.0"  # 2.0.1 depends on pycodestyle >= 2.10.0
+docformatter = {extras = ["tomli"], version = "^1.5.1"}
+unify = "^0.5"
+add-trailing-comma ="^2.4.0"
+isort = "^5.12.0"
+
+# Others
+shellcheck-py = {version = "^0.9.0.2", optional = true}
+mdformat = {version = "^0.7.16", optional = true}
+mdformat-gfm = {version = "^0.3.5", optional = true}
+mdformat-frontmatter = {version = "^0.4.1", optional = true}
+mdformat-footnote = {version = "^0.1.1", optional = true}
+
+[tool.poetry.extras]
+shell = ["shellcheck-py"]
+md = ["mdformat", "mdformat-gfm", "mdformat-frontmatter", "mdformat-footnote"]
 
 [tool.poetry.group.dev.dependencies]
-pytest = "7.2.1"
-pytest-cov = "4.0.0"
-pytest-xdist = "3.1.0"
+pytest = "^7.2.1"
+pytest-cov = "^4.0.0"
+pytest-xdist = "^3.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -62,9 +61,6 @@ build-backend = "poetry.core.masonry.api"
 addopts = "-n auto"
 testpaths = ["tests",]
 
-[tool.black]
-line-length = 79
-
 [tool.autoflake]
 remove-all-unused-imports = true
 expand-star-imports = true
@@ -72,26 +68,21 @@ remove-duplicate-keys = true
 remove-unused-variables = true
 
 [tool.autopep8]
-ignore = "E203,E501,W503"
+ignore = "W503"
 recursive = true
 aggressive = 3
 
 [tool.isort]
-profile = "black"
+profile = "wemake"
 line_length = 79
 
 [tool.flake8]
-# E203 is not PEP8 compliant and black insert space around slice: [Frequently Asked Questions - Black 22.12.0 documentation](https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated)
-# E501: Line too long. Disable it to allow long lines of comments and print lines which black allows.
 # W503 is the counter part of W504, which follows current PEP8: [Line break occurred before a binary operator (W503)](https://www.flake8rules.com/rules/W503.html)
 # D100~D106: Missing docstrings other than class (D101)
 # D401: First line should be in imperative mood
-ignore = "E203,E501,W503,D100,D102,D103,D104,D105,D106,D401"
+ignore = "W503,D100,D102,D103,D104,D105,D106,D401"
 max-complexity = 10
 docstring-convention = "numpy"
-
-[tool.bandit]
-exclude_dirs = ["tests"]
 
 [tool.mypy]
 files = ["src/**/*.py"]
