--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -24,9 +24,9 @@ jobs:
         run: |
           last_tag=$(git tag --sort=version:refname | tail -n1)
           if [ -z "$(git diff $last_tag src pyproject.toml)" ];then
-            echo "last_tag=''" | tee -a $GITHUB_OUTPUT
+            echo "last_tag=''" >> $GITHUB_OUTPUT
           else
-            echo "last_tag=$last_tag" | tee -a $GITHUB_OUTPUT
+            echo "last_tag=$last_tag" >> $GITHUB_OUTPUT
           fi
       - name: check last_tag
         run: |
