--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       last_tag: ${{ steps.last_tag.outputs.last_tag }}
+      flag: ${{ steps.last_tag.outputs.flag }}
+
     steps:
       - uses: actions/checkout@v3
         with:
@@ -22,49 +24,58 @@ jobs:
       - name: Compare to the last tag
         id: last_tag
         run: |
+          git pull --tags
           last_tag=$(git tag --sort=version:refname | tail -n1)
+          echo $last_tag
           if [ -z "$(git diff $last_tag src pyproject.toml)" ];then
-            echo "last_tag=''" >> $GITHUB_OUTPUT
+            echo "last_tag=''" | tee -a $GITHUB_OUTPUT
           else
-            echo "last_tag=$last_tag" >> $GITHUB_OUTPUT
+            echo "last_tag=$last_tag"  | tee -a $GITHUB_OUTPUT
           fi
+          if [ "${{ env.boolean_var }}" = "true" ];then
+            echo "flag=1" | tee -a $GITHUB_OUTPUT
+          else
+            echo "flag=0" | tee -a $GITHUB_OUTPUT
+          fi
+
       - name: check last_tag
         run: |
           echo ${{ steps.last_tag.outputs.last_tag }}
+          echo ${{ steps.last_tag.outputs.Lflag }}
+
   publish:
     permissions:
       contents: write
     runs-on: ubuntu-latest
-    if: ${{ needs.check.outputs.last_tag != '' }}
+    if: ${{ needs.check.outputs.last_tag == '' }}
     needs: check
     steps:
       - name: Update tag
         run: |
-          ls
           echo ${{ needs.check.outputs.last_tag }}
-          last_tag=${{ needs.check.outputs.last_tag }}
-          minor=${last_tag##*.}
-          ((++minor))
-          new_tag=${last_tag%.*}.${minor}
-          new_tag=${new_tag#v}
-          sed -i"" "s/^version.*$/version = \"${new_tag}\"/" pyproject.toml
-          sed -i"" "s/^__version__.*$/__version__ = \"${new_tag}\"/"  src/pyproject_pre_commit/__init__.py
-      - name: Commit and push
-        run: |
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git add .
-          PRE_COMMIT_ALLOW_NO_CONFIG=1 git commit -m "update tag"
-      - name: Push
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ inputs.github_token }}
-          branch: main
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-      - name: Publish to PyPI
-        run: |
-          pip install poetry
-          poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
-          poetry publish --build
+  #        last_tag=${{ needs.check.outputs.last_tag }}
+  #        minor=${last_tag##*.}
+  #        ((++minor))
+  #        new_tag=${last_tag%.*}.${minor}
+  #        new_tag=${new_tag#v}
+  #        sed -i"" "s/^version.*$/version = \"${new_tag}\"/" pyproject.toml
+  #        sed -i"" "s/^__version__.*$/__version__ = \"${new_tag}\"/"  src/pyproject_pre_commit/__init__.py
+  #    - name: Commit and push
+  #      run: |
+  #        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+  #        git config --local user.name "github-actions[bot]"
+  #        git add .
+  #        PRE_COMMIT_ALLOW_NO_CONFIG=1 git commit -m "update tag"
+  #    - name: Push
+  #      uses: ad-m/github-push-action@master
+  #      with:
+  #        github_token: ${{ inputs.github_token }}
+  #        branch: main
+  #    - uses: actions/setup-python@v4
+  #      with:
+  #        python-version: "3.10"
+  #    - name: Publish to PyPI
+  #      run: |
+  #        pip install poetry
+  #        poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
+  #        poetry publish --build
