--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -13,69 +13,59 @@ concurrency:
 jobs:
   check:
     runs-on: ubuntu-latest
-    outputs:
-      last_tag: ${{ steps.last_tag.outputs.last_tag }}
-      flag: ${{ steps.last_tag.outputs.flag }}
-
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
         with:
           ref: main
       - name: Compare to the last tag
-        id: last_tag
+        id: check
         run: |
           git pull --tags
           last_tag=$(git tag --sort=version:refname | tail -n1)
           echo $last_tag
-          if [ -z "$(git diff $last_tag src pyproject.toml)" ];then
-            echo "last_tag=''" | tee -a $GITHUB_OUTPUT
+          if [ -n "$(git diff $last_tag src pyproject.toml)" ];then
+            echo "flag=1" >> $GITHUB_OUTPUT
           else
-            echo "last_tag=$last_tag"  | tee -a $GITHUB_OUTPUT
+            echo "flag=0"  >> $GITHUB_OUTPUT
           fi
-          if [ "${{ env.boolean_var }}" = "true" ];then
-            echo "flag=1" | tee -a $GITHUB_OUTPUT
-          else
-            echo "flag=0" | tee -a $GITHUB_OUTPUT
-          fi
-
-      - name: check last_tag
-        run: |
-          echo ${{ steps.last_tag.outputs.last_tag }}
-          echo ${{ steps.last_tag.outputs.Lflag }}
-
-  publish:
-    permissions:
-      contents: write
-    runs-on: ubuntu-latest
-    if: ${{ needs.check.outputs.last_tag == '' }}
-    needs: check
-    steps:
       - name: Update tag
+        id: update
+        if: ${{ steps.check.outputs.flag == 1 }}
         run: |
-          echo ${{ needs.check.outputs.last_tag }}
-  #        last_tag=${{ needs.check.outputs.last_tag }}
-  #        minor=${last_tag##*.}
-  #        ((++minor))
-  #        new_tag=${last_tag%.*}.${minor}
-  #        new_tag=${new_tag#v}
-  #        sed -i"" "s/^version.*$/version = \"${new_tag}\"/" pyproject.toml
-  #        sed -i"" "s/^__version__.*$/__version__ = \"${new_tag}\"/"  src/pyproject_pre_commit/__init__.py
-  #    - name: Commit and push
-  #      run: |
-  #        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-  #        git config --local user.name "github-actions[bot]"
-  #        git add .
-  #        PRE_COMMIT_ALLOW_NO_CONFIG=1 git commit -m "update tag"
-  #    - name: Push
-  #      uses: ad-m/github-push-action@master
-  #      with:
-  #        github_token: ${{ inputs.github_token }}
-  #        branch: main
-  #    - uses: actions/setup-python@v4
-  #      with:
-  #        python-version: "3.10"
-  #    - name: Publish to PyPI
-  #      run: |
-  #        pip install poetry
-  #        poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
-  #        poetry publish --build
+          last_tag=$(git tag --sort=version:refname | tail -n1)
+          minor=${last_tag##*.}
+          ((++minor))
+          new_tag=${last_tag%.*}.${minor}
+          new_tag=${new_tag#v}
+          sed -i"" "s/^version.*$/version = \"${new_tag}\"/" pyproject.toml
+          sed -i"" "s/^__version__.*$/__version__ = \"${new_tag}\"/"  src/pyproject_pre_commit/__init__.py
+          if [ -n "$(git diff)" ];then
+            echo "flag=1" >> $GITHUB_OUTPUT
+          else
+            echo "flag=0"  >> $GITHUB_OUTPUT
+          fi
+      - name: Commit and push
+        if: ${{ steps.check.outputs.flag == 1 && steps.update.outputs.flag == 1 }}
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add .
+          PRE_COMMIT_ALLOW_NO_CONFIG=1 git commit -m "update tag"
+      - name: Push
+        if: ${{ steps.check.outputs.flag == 1 && steps.update.outputs.flag == 1 }}
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ inputs.github_token }}
+          branch: main
+      - uses: actions/setup-python@v4
+        if: ${{ steps.check.outputs.flag == 1 }}
+        with:
+          python-version: "3.10"
+      - name: Publish to PyPI
+        if: ${{ steps.check.outputs.flag == 1 }}
+        run: |
+          pip install poetry
+          poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
+          poetry publish --build
