--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,32 +6,79 @@ on:
     branches-ignore:
       - "coverage"
       - "renovate/**"
+  pull_request:
+  workflow_dispatch:
+    inputs:
+      main_branch:
+        description: "Main branch for coverage/tmate."
+        type: string
+        required: false
+        default: "main"
+      main_os:
+        description: "Main os for coverage/tmate."
+        type: choice
+        default: "ubuntu-latest"
+        options:
+          - "ubuntu-latest"
+      main_py_ver:
+        description: "Main python version for coverage/tmate."
+        type: choice
+        default: "3.10"
+        options:
+          - "3.11"
+          - "3.10"
+          - "3.9"
+      tmate:
+        type: boolean
+        description: 'Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate). This is only for main strategy and others will be stopped.'
+        required: false
+        default: false
+
+env:
+  MAIN_BRANCH: ${{ inputs.main_branch || 'main' }}
+  MAIN_OS: ${{ inputs.main_os || 'ubuntu-latest' }}
+  MAIN_PY_VER: ${{ inputs.main_py_ver || '3.10' }}
+  TMATE: ${{ inputs.tmate || 'false' }}
+
+
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  test_matrix:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest]
+        python-version: ["3.11", "3.10", "3.9"]
     permissions:
-      actions: write
+      contents: write
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: convictional/trigger-workflow-and-wait@v1.6.5
-        continue-on-error: true
-        id: dispatch
-        with:
-          owner: ${{ github.repository_owner }}
-          repo: ${{ github.event.repository.name }}
-          ref: ${{ github.ref }}
-          github_token: ${{ github.token }}
-          workflow_file_name: dispatch.yml
-          propagate_failure: true
-      - name: Write workflow url
+      - name: Check is main
+        id: is_main
         run: |
-          echo Main job URL: ${{ steps.dispatch.outputs.workflow_url }} >> $GITHUB_STEP_SUMMARY
-      - name: Check status
-        run: |
-          if [ "${{ steps.dispatch.outcome }}" != "success" ];then
-            exit 1
+          if [ "${{ github.ref }}" = "refs/heads/${{ env.MAIN_BRANCH }}" ] && [ "${{ matrix.os }}" = "${{ env.MAIN_OS }}" ] && [ "${{ matrix.python-version }}" = "${{ env.MAIN_PY_VER }}" ];then
+            echo "IS_MAIN=1" >> $GITHUB_ENV
+            is_main=1
+          else
+            echo "IS_MAIN=0" >> $GITHUB_ENV
+            is_main=0
           fi
+          if [ "${{ env.TMATE }}" = "true" ];then
+            if [ "$is_main" = 0 ];then
+              echo "Tmate is enabled and this is not main, skip tests"
+              exit 1
+            fi
+            echo "DEBUG=1" >> $GITHUB_ENV
+          else
+            echo "DEBUG=0" >> $GITHUB_ENV
+          fi
+      - uses: rcmdnk/python-action@v1
+        with:
+          coverage-push: "${{ env.IS_MAIN }}"
+          coverage-push-condition: "branch=${{ env.MAIN_BRANCH }}, os=${{ env.MAIN_OS }}, python_version=${{ env.MAIN_PY_VER }}"
+          pre-commit: "${{ env.IS_MAIN }}"
+          tmate: "${{ env.DEBUG }}"
