--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,10 +36,10 @@ on:
         default: false
 
 env:
-  MAIN_BRANCH: ${{ inputs.main_branch || 'main' }}
-  MAIN_OS: ${{ inputs.main_os || 'ubuntu-latest' }}
+  main_branch: ${{ inputs.main_branch || 'main' }}
+  main_os: ${{ inputs.main_os || 'ubuntu-latest' }}
   MAIN_PY_VER: ${{ inputs.main_py_ver || '3.10' }}
-  TMATE: ${{ inputs.tmate || 'false' }}
+  tmate: ${{ inputs.tmate || 'false' }}
 
 
 
@@ -61,25 +61,26 @@ jobs:
       - name: Check is main
         id: is_main
         run: |
-          if [ "${{ github.ref }}" = "refs/heads/${{ env.MAIN_BRANCH }}" ] && [ "${{ matrix.os }}" = "${{ env.MAIN_OS }}" ] && [ "${{ matrix.python-version }}" = "${{ env.MAIN_PY_VER }}" ];then
-            echo "IS_MAIN=1" >> $GITHUB_ENV
+          if [ "${{ github.ref }}" = "refs/heads/${{ env.main_branch }}" ] && [ "${{ matrix.os }}" = "${{ env.main_os }}" ] && [ "${{ matrix.python-version }}" = "${{ env.MAIN_PY_VER }}" ];then
+            echo "is_main=1" >> $GITHUB_ENV
             is_main=1
           else
-            echo "IS_MAIN=0" >> $GITHUB_ENV
+            echo "is_main=0" >> $GITHUB_ENV
             is_main=0
           fi
-          if [ "${{ env.TMATE }}" = "true" ];then
+          if [ "${{ env.tmate }}" = "true" ];then
             if [ "$is_main" = 0 ];then
               echo "Tmate is enabled and this is not main, skip tests"
               exit 1
             fi
-            echo "DEBUG=1" >> $GITHUB_ENV
+            echo "debug=1" >> $GITHUB_ENV
           else
-            echo "DEBUG=0" >> $GITHUB_ENV
+            echo "debug=0" >> $GITHUB_ENV
           fi
       - uses: rcmdnk/python-action@v1
         with:
-          coverage-push: "${{ env.IS_MAIN }}"
-          coverage-push-condition: "branch=${{ env.MAIN_BRANCH }}, os=${{ env.MAIN_OS }}, python_version=${{ env.MAIN_PY_VER }}"
-          pre-commit: "${{ env.IS_MAIN }}"
-          tmate: "${{ env.DEBUG }}"
+          python-version: "${{ matrix.python-version }}"
+          coverage-push: "${{ env.is_main }}"
+          coverage-push-condition: "branch=${{ env.main_branch }}, os=${{ env.main_os }}, python_version=${{ env.MAIN_PY_VER }}"
+          pre-commit: "${{ env.is_main }}"
+          tmate: "${{ env.debug }}"
