--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,38 +20,38 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12"
-pre-commit = "3.3.3"
-black = "23.7.0"
-blacken-docs = "1.16.0"
-flake8-pyproject = "1.2.3"
-flake8-annotations-complexity = "0.0.8"
-flake8-bugbear = "23.7.10"
-flake8-builtins = "2.1.0"
-flake8-comprehensions = "3.14.0"
-flake8-debugger = "4.1.2"
-flake8-docstrings = "1.7.0"
-flake8-executable = "2.1.3"
+pre-commit = "^3.3.3"
+black = "^23.7.0"
+blacken-docs = "^1.16.0"
+flake8-pyproject = "^1.2.3"
+flake8-annotations-complexity = "^0.0.8"
+flake8-bugbear = "^23.7.10"
+flake8-builtins = "^2.1.0"
+flake8-comprehensions = "^3.14.0"
+flake8-debugger = "^4.1.2"
+flake8-docstrings = "^1.7.0"
+flake8-executable = "^2.1.3"
 flake8-pep3101 = "^2.0.0"
-flake8-print = "5.0.0"
-flake8-rst-docstrings = "0.3.0"
-flake8-string-format = "0.3.0"
-pep8-naming = "0.13.3"
-pycodestyle = "2.11.0"
-autoflake = "2.2.1"
-autopep8 = "2.0.4"
-isort = "5.12.0"
-mypy = "1.5.1"
-bandit = {extras = ["toml"], version = "1.7.5"}
-shellcheck-py = "0.9.0.5"
-mdformat = "0.7.17"
-mdformat-gfm = "0.3.5"
-mdformat-frontmatter = "2.0.1"
-mdformat-footnote = "0.1.1"
+flake8-print = "^5.0.0"
+flake8-rst-docstrings = "^0.3.0"
+flake8-string-format = "^0.3.0"
+pep8-naming = "^0.13.3"
+pycodestyle = "^2.11.0"
+autoflake = "^2.2.1"
+autopep8 = "^2.0.4"
+isort = "^5.12.0"
+mypy = "^1.5.1"
+bandit = {extras = ["toml"], version = "^1.7.5"}
+shellcheck-py = "^0.9.0.5"
+mdformat = "^0.7.17"
+mdformat-gfm = "^0.3.5"
+mdformat-frontmatter = "^2.0.1"
+mdformat-footnote = "^0.1.1"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "7.4.1"
-pytest-cov = "4.1.0"
-pytest-xdist = "3.3.1"
+pytest = "^7.4.1"
+pytest-cov = "^4.1.0"
+pytest-xdist = "^3.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
