--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<3.12"
+python = ">=3.8.1"
 pre-commit = "^3.3.3"
 black = "^23.7.0"
 blacken-docs = "^1.16.0"
