--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ autopep8 = "^2.0.4"
 isort = "^5.12.0"
 mypy = "^1.5.1"
 bandit = {extras = ["toml"], version = "^1.7.5"}
+numpydoc = "^1.6.0"
 shellcheck-py = "^0.9.0.5"
 mdformat = "^0.7.17"
 mdformat-gfm = "^0.3.5"
