chore: Update .pre-commit-config.yaml with numpydoc-validation configuration chore: Update .pre-commit-config.yaml with shellcheck configuration feat: Add numpydoc-validation configuration to .pre-commit-config.yaml docs: Update pyproject.toml with numpydoc_validation configuration docs: Update pyproject.toml with poetry.scripts configuration

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -117,6 +117,14 @@ repos:
           - pyi
         require_serial: true
         pass_filenames: false
+      - id: numpydoc-validation
+        # https://github.com/numpy/numpydoc
+        name: numpydoc-validation
+        entry: validate-docstrings
+        require_serial: true
+        language: system
+        types:
+          - python
       - id: shellcheck
         # https://github.com/shellcheck-py/shellcheck-py
         name: shellcheck
