--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,5 +100,17 @@ warn_return_any = false
 ignore_missing_imports = true
 scripts_are_modules = true
 
+[tool.numpydoc_validation]
+checks = [
+    "all",   # report on all checks, except the below
+    "EX01",  # "No examples section found"
+    "ES01",  # "No extended summary found"
+    "SA01",  # "See Also section not found"
+    "GL08",  # "The object does not have a docstring"
+    "PR01",  # "Parameters {missing_params} not documented"
+    "PR02",  # "Unknown parameters {unknown_params}"
+    "RT01",  # "No Returns section found"
+]
+
 [tool.poetry.scripts]
 ppc = "pyproject_pre_commit:main"
