--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ flake8-comprehensions = "^3.14.0"
 flake8-debugger = "^4.1.2"
 flake8-docstrings = "^1.7.0"
 flake8-executable = "^2.1.3"
+flake8-mutable = "^1.2.0"
 flake8-pep3101 = "^2.0.0"
 flake8-print = "^5.0.0"
 flake8-rst-docstrings = "^0.3.0"
