docs: update readme

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,8 @@ strict = true
 warn_return_any = false
 ignore_missing_imports = true
 scripts_are_modules = true
+install_types = true
+non_interactive = true
 
 [tool.numpydoc_validation]
 checks = [
