chore: update Python version to >= 3.9.0 (to satisfy numpydoc 1.8.0) chore: bump numpydoc version to 1.8.0 in pyproject.toml fix: rename numpydoc-validation hook to numpydoc lint in .pre-commit-hooks.yaml (to satisfy numpydoc 1.8.0)

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -132,7 +132,7 @@
   pass_filenames: false
 - id: numpydoc-validation
   # https://github.com/numpy/numpydoc
-  name: numpydoc-validation
+  name: numpydoc lint
   entry: validate-docstrings
   description: This hook validates that docstrings in committed files adhere to numpydoc standards.
   require_serial: true
