chore: add --quiet option to pre-commit hooks for improved output management

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -11,6 +11,7 @@
   args:
     - "--diff"
     - "--color"
+    - "--quiet"
   verbose: true
 - id: black
   # https://github.com/psf/black
@@ -22,6 +23,8 @@
     - python
     - pyi
   require_serial: true
+  args:
+    - "--quiet"
 - id: blacken-docs
   # https://github.com/asottile/blacken-docs
   name: blacken-docs
