--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,54 @@
 repos:
   - repo: local
     hooks:
+      - id: ruff-lint-diff
+        # https://github.com/astral-sh/ruff-pre-commit
+        name: ruff-lint-diff
+        description: "Show diff of ruff for linting"
+        entry: ruff check --diff --force-exclude
+        language: system
+        types_or:
+          - python
+          - pyi
+          - jupyter
+        require_serial: true
+        minimum_pre_commit_version: "2.9.2"
+        verbose: true
+      - id: ruff-lint
+        # https://github.com/astral-sh/ruff-pre-commit
+        name: ruff-lint
+        description: "Fix by ruff for linting"
+        entry: ruff check --fix --force-exclude
+        language: system
+        types_or:
+          - python
+          - pyi
+          - jupyter
+        require_serial: true
+        minimum_pre_commit_version: "2.9.2"
+      - id: ruff-format-diff
+        name: ruff-format-diff
+        description: "Show diff of ruff for formatting"
+        entry: ruff format --diff --force-exclude
+        language: python
+        types_or:
+          - python
+          - pyi
+          - jupyter
+        require_serial: true
+        minimum_pre_commit_version: "2.9.2"
+        verbose: true
+      - id: ruff-format
+        name: ruff-format
+        description: "Fix by ruff for formatting"
+        entry: ruff format --force-exclude
+        language: python
+        types_or:
+          - python
+          - pyi
+          - jupyter
+        require_serial: true
+        minimum_pre_commit_version: "2.9.2"
       - id: black-diff
         name: black-diff
         entry: black
