--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
-[tool.poetry]
+[project]
 name = "pyproject-pre-commit"
-version = "0.2.5"
+version = "0.3.0"
 description = "pre-commit hooks for python projects using pyproject.toml."
-authors = ["rcmdnk <rcmdnk@gmail.com>"]
+authors = [
+  { name = "rcmdnk", email = "rcmdnk@gmail.com" }
+]
 repository = "https://github.com/rcmdnk/pyproject-pre-commit"
 homepage = "https://github.com/rcmdnk/pyproject-pre-commit"
 readme = "README.md"
@@ -17,59 +19,57 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Utilities",
 ]
+requires-python = ">=3.9.0"
+dependencies = [
+  "pre-commit >= 4.0.0",
+  "black >= 24.3.0",
+  "blacken-docs >= 1.16.0",
+  "flake8-pyproject >= 1.2.3",
+  "flake8-annotations-complexity >= 0.0.8",
+  "flake8-bugbear >= 24.0.0",
+  "flake8-builtins >= 2.1.0",
+  "flake8-comprehensions >= 3.14.0",
+  "flake8-debugger >= 4.1.2",
+  "flake8-docstrings >= 1.7.0",
+  "flake8-executable >= 2.1.3",
+  "flake8-pep3101 >= 2.0.0",
+  "flake8-print >= 5.0.0",
+  "flake8-rst-docstrings >= 0.3.0",
+  "flake8-string-format >= 0.3.0",
+  "pep8-naming >= 0.14.0",
+  "pycodestyle >= 2.11.0",
+  "autoflake >= 2.2.1",
+  "autopep8 >= 2.0.4",
+  "isort >= 5.12.0",
+  "bandit[toml] >= 1.7.5",
+  "mypy >= 1.5.1",
+  "numpydoc >= 1.8.0",
+  "shellcheck-py >= 0.9.0.5",
+  "mdformat >= 0.7.17",
+  "mdformat-gfm >= 0.3.5",
+  "mdformat-frontmatter >= 2.0.1",
+  "mdformat-footnote >= 0.1.1",
+]
 
-[tool.poetry.dependencies]
-python = "^3.9.0"
-pre-commit = "^4.0.0"
-
-ruff = {version = "^0.7.2", optional = true}
-
-black = "^24.3.0"
-blacken-docs = "^1.16.0"
-flake8-pyproject = "^1.2.3"
-flake8-annotations-complexity = "^0.0.8"
-flake8-bugbear = "^24.0.0"
-flake8-builtins = "^2.1.0"
-flake8-comprehensions = "^3.14.0"
-flake8-debugger = "^4.1.2"
-flake8-docstrings = "^1.7.0"
-flake8-executable = "^2.1.3"
-flake8-pep3101 = "^2.0.0"
-flake8-print = "^5.0.0"
-flake8-rst-docstrings = "^0.3.0"
-flake8-string-format = "^0.3.0"
-pep8-naming = "^0.14.0"
-pycodestyle = "^2.11.0"
-autoflake = "^2.2.1"
-autopep8 = "^2.0.4"
-isort = "^5.12.0"
-bandit = {extras = ["toml"], version = "^1.7.5"}
-
-mypy = "^1.5.1"
-numpydoc = "^1.8.0"
-shellcheck-py = "^0.9.0.5"
-mdformat = "^0.7.17"
-mdformat-gfm = "^0.3.5"
-mdformat-frontmatter = "^2.0.1"
-mdformat-footnote = "^0.1.1"
+[project.optional-dependencies]
+ruff = [
+  "ruff >= 0.7.2",
+]
 
 [tool.poetry.extras]
 ruff = ["ruff"]
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.0.0"
-pytest-cov = "^6.0.0"
-pytest-xdist = "^3.3.1"
-
-[tool.poetry.group.ruff]
-optional = false
-
-[tool.poetry.group.ruff.dependencies]
-ruff = "^0.7.2"
+[dependency-groups]
+dev = [
+  "pytest >= 8.0.0",
+  "pytest-cov >= 6.0.0",
+  "pytest-xdist >= 3.3.1",
+  "ruff >= 0.7.2",
+]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.pytest.ini_options]
 addopts = "-n auto"
