refactor: update pre-commit hook entry for numpydoc validation feat: add additional mdformat plugins to pyproject.toml dependencies feat: add mdformat-ruff to ruff optional and dev dependencies in pyproject.toml

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -171,7 +171,7 @@ repos:
       - id: numpydoc-validation
         # https://github.com/numpy/numpydoc
         name: numpydoc-validation
-        entry: validate-docstrings
+        entry: numpydoc lint
         require_serial: true
         language: system
         types:
