--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,14 +46,21 @@ dependencies = [
   "numpydoc >= 1.8.0",
   "shellcheck-py >= 0.9.0.5",
   "mdformat >= 0.7.17",
-  "mdformat-gfm >= 0.3.5",
-  "mdformat-frontmatter >= 2.0.1",
+  "mdformat-pyproject>=0.0.1",
+  "mdformat-config>=0.2.1",
+  "mdformat-rustfmt>=0.0.3",
   "mdformat-footnote >= 0.1.1",
+  "mdformat-frontmatter >= 2.0.1",
+  "mdformat-gfm >= 0.3.5",
+  "mdformat-tables>=1.0.0",
+  "mdformat-web>=0.2.0",
+  "mdformat-toc>=0.3.0",
 ]
 
 [project.optional-dependencies]
 ruff = [
   "ruff >= 0.7.2",
+  "mdformat-ruff >= 0.1.3",
 ]
 
 [dependency-groups]
@@ -62,6 +69,7 @@ dev = [
   "pytest-cov >= 6.0.0",
   "pytest-xdist >= 3.3.1",
   "ruff >= 0.7.2",
+  "mdformat-ruff >= 0.1.3",
 ]
 
 [project.scripts]
