feat: add validate-pyproject hook to pre-commit configuration chore: move repository and homepage to project.urls in pyproject.toml chore: add validate-pyproject dependency to pyproject.toml chore: enforce require_serial for various hooks in pre-commit configuration

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,4 @@
+---
 repos:
   - repo: local
     hooks:
@@ -195,6 +196,12 @@ repos:
         entry: mdformat
         language: system
         types: [markdown]
+      - id: validate-pyproject
+        name: validate-pyproject
+        entry: validate-pyproject
+        language: system
+        types: []
+        files: ^pyproject.toml$
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
