--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,6 @@ description = "pre-commit hooks for python projects using pyproject.toml."
 authors = [
   { name = "rcmdnk", email = "rcmdnk@gmail.com" }
 ]
-repository = "https://github.com/rcmdnk/pyproject-pre-commit"
-homepage = "https://github.com/rcmdnk/pyproject-pre-commit"
 readme = "README.md"
 license = "Apache-2.0"
 keywords = ["pre-commit", "pyproject.toml", "uv"]
@@ -55,7 +53,13 @@ dependencies = [
   "mdformat-tables>=1.0.0",
   "mdformat-web>=0.2.0",
   "mdformat-toc>=0.3.0",
+  "validate-pyproject[all]>=0.22",
 ]
+
+[project.urls]
+repository = "https://github.com/rcmdnk/pyproject-pre-commit"
+homepage = "https://github.com/rcmdnk/pyproject-pre-commit"
+documentation = "https://github.com/rcmdnk/pyproject-pre-commit"
 
 [project.optional-dependencies]
 ruff = [
